# kona

./: README.md  ROADMAP.md  jest.config.js  kona.ts  package.json  typedoc.json
.github/workflows/: benchmark.yml
assets/: README.md
docs/: BENCHMARKS.md  CASE_STUDIES.md  PLUGINS.md
rust-wasm/: .gitignore  Cargo.toml  README.md
rust-wasm/benches/: parser_bench.rs
rust-wasm/src/: bundler.rs  lib.rs  minifier.rs  parallel.rs  parser.rs  transformer.rs  tree_shaker.rs  utils.rs
src/: index.ts  tsconfig.json
src/__mocks__/: open.ts
src/bundle/: bundle.ts
src/bundleRuntime/: bundleRuntimeCore.ts  esmRuntime.ts
src/cli/: cli.ts
src/compiler/interfaces/: ImportType.ts
src/config/: extensions.ts
src/core/: kona.ts
src/core/bundler/: bundler.ts  parallelBundler.ts  turboBundler.ts
src/core/devServer/: server.ts
src/core/helpers/: finalizeKona.ts  preflightKona.ts
src/core/parser/: parser.ts
src/core/plugins/: pluginSystem.ts
src/core/resolver/: moduleResolver.ts
src/esm/: index.ts
src/fuseLog/: FuseBoxLogAdapter.ts
src/hmr/: enhancedHMR.ts
src/log/: KonaLogAdapter.ts
src/optimization/: bundleSizeOptimizer.ts  depclean.ts
src/plugins/core/: plugin_nextjs.ts  plugin_react.ts  plugin_wasm.ts
src/resolver/: fileLookup.ts
src/wasm/: fallback.ts  index.ts  optimizer.ts
test-app/: kona.ts  package.json
test-app/public/: index.html
test-app/src/: App.tsx
